add lead unit and normalize.css

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "centurion",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "normalize-css": "normalize.css#~3.0.3"
   },
   "devDependencies": {
     "chai": "~3.3.0",
