Create responsive layout with six subdivisions that break when the subdivision is under 200px

--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,7 @@
   "name": "centurion",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.4",
-    "normalize-css": "normalize.css#~3.0.3"
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "chai": "~3.3.0",
